--- a/extra.mk.in
+++ b/extra.mk.in
@@ -21,6 +21,8 @@ USE_QT ?= @USE_QT@
 
 ALSA_CFLAGS ?= @ALSA_CFLAGS@
 ALSA_LIBS ?= @ALSA_LIBS@
+AMPACHE_CFLAGS ?= @AMPACHE_CFLAGS@
+AMPACHE_LIBS ?= @AMPACHE_LIBS@
 BS2B_CFLAGS ?= @BS2B_CFLAGS@
 BS2B_LIBS ?= @BS2B_LIBS@
 CDIO_LIBS ?= @CDIO_LIBS@
