--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,5 @@
 # Please don't update this file manually - use ./update-potfiles.sh instead!
-src/aac-raw/aac.cc
+src/aac/aac.cc
 src/adplug/adplug-xmms.cc
 src/adplug/core/rix.cc
 src/adplug/core/rix.h
@@ -9,10 +9,11 @@ src/albumart/albumart.cc
 src/albumart-qt/albumart.cc
 src/alsa/alsa.h
 src/alsa/config.cc
-src/amidi-plug/amidi-plug.cc
-src/amidi-plug/i_configure.cc
-src/amidi-plug/i_configure-fluidsynth.cc
-src/amidi-plug/i_fileinfo.cc
+src/amidiplug/amidi-plug.cc
+src/amidiplug/i_configure.cc
+src/amidiplug/i_configure-fluidsynth.cc
+src/amidiplug/i_fileinfo.cc
+src/ampache/ampache.cc
 src/aosd/aosd.cc
 src/aosd/aosd.h
 src/aosd/aosd_style.cc
@@ -24,7 +25,7 @@ src/audpl/audpl.cc
 src/blur_scope/blur_scope.cc
 src/bs2b/plugin.cc
 src/cairo-spectrum/cairo-spectrum.cc
-src/cdaudio-ng/cdaudio-ng.cc
+src/cdaudio/cdaudio-ng.cc
 src/cd-menu-items/cd-menu-items.cc
 src/compressor/compressor.cc
 src/console/Ay_Apu.cc
@@ -89,14 +90,11 @@ src/delete-files/delete-files.cc
 src/echo_plugin/echo.cc
 src/ffaudio/ffaudio-core.cc
 src/filewriter/filewriter.cc
-src/filewriter/mp3.cc
-src/filewriter/vorbis.cc
-src/flacng/flacng.h
-src/flacng/metadata.cc
-src/flacng/plugin.cc
+src/flac/flacng.h
+src/flac/metadata.cc
+src/flac/plugin.cc
 src/gio/gio.cc
-src/gl-spectrum/gl-spectrum.cc
-src/gl-spectrum-qt/gl-spectrum.cc
+src/glspectrum/gl-spectrum.cc
 src/gnomeshortcuts/gnomeshortcuts.cc
 src/gtkui/columns.cc
 src/gtkui/layout.cc
@@ -107,7 +105,7 @@ src/gtkui/ui_playlist_widget.cc
 src/gtkui/ui_statusbar.cc
 src/hotkey/gui.cc
 src/hotkey/plugin.cc
-src/jack-ng/jack-ng.cc
+src/jack/jack-ng.cc
 src/ladspa/plugin.cc
 src/ladspa/plugin.h
 src/lirc/lirc.cc
@@ -133,12 +131,13 @@ src/playlist-manager-qt/playlist-manager-qt.cc
 src/pls/pls.cc
 src/psf/plugin.cc
 src/psf/psx.h
-src/pulse_audio/pulse_audio.cc
+src/pulse/pulse_audio.cc
 src/qtaudio/qtaudio.cc
+src/qtglspectrum/gl-spectrum.cc
 src/qtui/dialog_windows.cc
 src/qtui/filter_input.cc
-src/qtui/main_window_actions.cc
 src/qtui/main_window.cc
+src/qtui/menus.cc
 src/qtui/playlist_model.cc
 src/qtui/qtui.cc
 src/qtui/settings.cc
@@ -173,11 +172,11 @@ src/skins/search-select.cc
 src/skins/skins_cfg.cc
 src/skins/skinselector.cc
 src/sndfile/plugin.cc
-src/sndio-ng/sndio.cc
-src/song_change/song_change.cc
+src/sndio/sndio.cc
+src/songchange/song_change.cc
 src/song-info-qt/song-info.cc
-src/sox-resampler/sox-resampler.cc
-src/speed-pitch/speed-pitch.cc
+src/soxr/sox-resampler.cc
+src/speedpitch/speed-pitch.cc
 src/statusicon-qt/statusicon.cc
 src/statusicon/statusicon.cc
 src/stereo_plugin/stereo.cc
@@ -187,6 +186,7 @@ src/vorbis/vorbis.cc
 src/vorbis/vorbis.h
 src/vtx/info.cc
 src/vtx/vtx.cc
+src/waveout/waveout.cc
 src/wavpack/wavpack.cc
 src/xsf/desmume/types.h
 src/xsf/plugin.cc
