--- a/src/scrobbler2/Makefile
+++ b/src/scrobbler2/Makefile
@@ -16,5 +16,5 @@ plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS} -Wall
-CPPFLAGS += ${PLUGIN_CPPFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS} ${CURL_CFLAGS} ${XML_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${CURL_LIBS} ${XML_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${CURL_CFLAGS} ${XML_CFLAGS} -I../..
+LIBS += ${GLIB_LIBS} ${CURL_LIBS} ${XML_LIBS}
