qtui: Add SearchBar class.

--- a/src/qtui/Makefile
+++ b/src/qtui/Makefile
@@ -8,6 +8,7 @@ SRCS = qtui.cc \
        playlist_model.cc \
        playlist_tabs.cc \
        info_bar.cc \
+       search_bar.cc \
        status_bar.cc \
        tool_bar.cc \
        time_slider.cc \
