qtui: Big update for playlist columns:
- added all missing columns compared to GTK UI;
- populated their data and fixed column naming;
- fixed data alignment;
- added a configuration widget for adding/removing columns (no d'n'd);
- made configuration widget to be updated on column reordering through column headers d'n'd;
- made column configuration (visibility/size/order) be saved and restored.

--- a/src/qtui/Makefile
+++ b/src/qtui/Makefile
@@ -5,6 +5,7 @@ SRCS = qtui.cc \
        main_window.cc \
        menus.cc \
        playlist.cc \
+       playlist_columns.cc \
        playlist_model.cc \
        playlist_tabs.cc \
        info_bar.cc \
