qtui: Add/remove columns by right-clicking on the column headers.

--- a/src/qtui/Makefile
+++ b/src/qtui/Makefile
@@ -6,6 +6,7 @@ SRCS = qtui.cc \
        menus.cc \
        playlist.cc \
        playlist_columns.cc \
+       playlist_header.cc \
        playlist_model.cc \
        playlist_tabs.cc \
        info_bar.cc \
