--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ dnl ***
 dnl Initialize
 dnl ==========
 AC_PREREQ([2.59])
-AC_INIT([audacious-plugins], [3.9-beta1])
+AC_INIT([audacious-plugins], [3.9])
 AC_COPYRIGHT([Copyright (C) 2001-2017 Audacious developers and others])
 
 AC_DEFINE_UNQUOTED([PACKAGE], "$PACKAGE_NAME", [Name of package])
