skins[-qt]: Rename util.cc/h to avoid name conflicts.

--- a/src/skins-qt/Makefile
+++ b/src/skins-qt/Makefile
@@ -24,10 +24,10 @@ SRCS = actions.cc \
        skin.cc \
        skin-ini.cc \
        skins_cfg.cc \
+       skins_util.cc \
        skinselector.cc \
        svis.cc \
        textbox.cc \
-       util.cc \
        view.cc \
        vis-callbacks.cc \
        vis.cc \
