--- a/src/skins/Makefile
+++ b/src/skins/Makefile
@@ -24,11 +24,11 @@ SRCS = actions.cc \
        skin.cc \
        skin-ini.cc \
        skins_cfg.cc \
+       skins_util.cc \
        skinselector.cc \
        surface.cc \
        svis.cc \
        textbox.cc \
-       util.cc \
        view.cc \
        vis-callbacks.cc \
        vis.cc \
