--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ before_install:
   - sudo apt-get install libsndfile1-dev libsoxr-dev libvorbis-dev libwavpack-dev
   - sudo apt-get install libxml2-dev libadplug-dev
 install:
-  - git clone git://github.com/audacious-media-player/audacious.git audacious
-  - git checkout master-gtk3
+  - git clone -b master-gtk3 git://github.com/audacious-media-player/audacious.git audacious
   - cd audacious
   - ./autogen.sh
   - ./configure --prefix=/opt/aud --enable-qt
