support bitperfect audio over CoreAudio
this implements a form of bitperfect audio, in which the CoreAudio
output device is set to the sample rate of the current content. If
the device doesn't support the exact rate, the closest reasonable
rate is found which should result in the smallest distortion (beats).

--- a/src/coreaudio/Makefile
+++ b/src/coreaudio/Makefile
@@ -1,6 +1,6 @@
 PLUGIN = coreaudio${PLUGIN_SUFFIX}
 
-SRCS = coreaudio.cc
+SRCS = coreaudio.cc audiodevice.mm
 
 include ../../buildsys.mk
 include ../../extra.mk
