use appropriate fonts for improved looks (mostly on Mac)

--- a/src/lyricwiki-qt/Makefile
+++ b/src/lyricwiki-qt/Makefile
@@ -11,4 +11,4 @@ LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${QT_CFLAGS} ${GLIB_CFLAGS} ${XML_CFLAGS} -I../..
-LIBS += ${QT_LIBS} ${GLIB_LIBS}  ${XML_LIBS}
+LIBS += ${QT_LIBS} ${GLIB_LIBS}  ${XML_LIBS} -laudqt
