song_change plugin for Win32

--- a/configure.ac
+++ b/configure.ac
@@ -414,7 +414,11 @@ ENABLE_PLUGIN_WITH_TEST(mpris2,
     GENERAL)
 
 test_songchange () {
-    AC_CHECK_HEADERS(sys/wait.h, have_songchange=yes, have_songchange=no)
+    if test $HAVE_MSWINDOWS = yes ; then
+        have_songchange=yes
+    else
+        AC_CHECK_HEADERS(sys/wait.h, have_songchange=yes, have_songchange=no)
+    fi
 }
 
 ENABLE_PLUGIN_WITH_TEST(songchange,
