--- a/extra.mk.in
+++ b/extra.mk.in
@@ -64,6 +64,8 @@ NEON_CFLAGS ?= @NEON_CFLAGS@
 NEON_LIBS ?= @NEON_LIBS@
 NOTIFY_CFLAGS ?= @NOTIFY_CFLAGS@
 NOTIFY_LIBS ?= @NOTIFY_LIBS@
+OPENMPT_CFLAGS ?= @OPENMPT_CFLAGS@
+OPENMPT_LIBS ?= @OPENMPT_LIBS@
 OSS_CFLAGS ?= @OSS_CFLAGS@
 SAMPLERATE_CFLAGS ?= @SAMPLERATE_CFLAGS@
 SAMPLERATE_LIBS ?= @SAMPLERATE_LIBS@
