configure: Display the plugin name instead of the library name.

--- a/configure.ac
+++ b/configure.ac
@@ -725,7 +725,7 @@ echo "  AdLib synthesizer (adplug):             $have_adplug"
 echo "  Commodore 64 audio (sid):               $have_sid"
 echo "  Game Music Emu (spc, nsf, gbs, etc.):   $have_console"
 echo "  ModPlug:                                $have_modplug"
-echo "  libopenmpt:                             $have_openmpt"
+echo "  OpenMPT:                                $have_openmpt"
 echo "  Nintendo DS audio (xsf):                yes"
 echo "  PlayStation audio (psf/psf2):           yes"
 echo "  Vortex Tracker (vtx):                   yes"
