amidiplug: start working on soundfont selection on qt

--- a/src/amidiplug/Makefile
+++ b/src/amidiplug/Makefile
@@ -15,10 +15,15 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${FLUIDSYNTH_CFLAGS} -I../..
-LIBS += ${FLUIDSYNTH_LIBS} -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${FLUIDSYNTH_CFLAGS} ${GLIB_CFLAGS} -I../..
+LIBS += ${FLUIDSYNTH_LIBS} ${GLIB_LIBS} -lm
 
 ifeq ($(USE_GTK),yes)
 CPPFLAGS += ${GTK_CFLAGS}
 LIBS += ${GTK_LIBS}
+endif
+
+ifeq ($(USE_QT),yes)
+CPPFLAGS += ${QT_CFLAGS}
+LIBS += ${QT_LIBS}
 endif
