--- a/src/qtui/meson.build
+++ b/src/qtui/meson.build
@@ -19,7 +19,7 @@ qtui_sources = [
 
 shared_module('qtui',
   qtui_sources,
-  dependencies: [audacious_dep, qt_dep],
+  dependencies: [audacious_dep, qt_dep, audqt_dep],
   install: true,
   install_dir: general_plugin_dir
 )
