--- a/src/blur_scope-qt/meson.build
+++ b/src/blur_scope-qt/meson.build
@@ -1,6 +1,6 @@
 shared_module('blur_scope-qt',
   'blur_scope.cc',
-  dependencies: [audacious_dep, qt_dep, glib_dep],
+  dependencies: [audacious_dep, qt_dep, glib_dep, audqt_dep],
   install: true,
   install_dir: visualization_plugin_dir
 )
