--- a/meson_options.txt
+++ b/meson_options.txt
@@ -2,3 +2,5 @@ option('dbus', type: 'boolean', value: true,
        description: 'Whether DBus support is enabled')
 option('qt', type: 'boolean', value: true,
        description: 'Whether Qt support is enabled')
+option('ffaudio', type: 'string', value: 'ffmpeg',
+       description: 'Choose between ffmpeg, libav or neither')
