--- a/meson_options.txt
+++ b/meson_options.txt
@@ -4,3 +4,5 @@ option('qt', type: 'boolean', value: true,
        description: 'Whether Qt support is enabled')
 option('ffaudio', type: 'string', value: 'ffmpeg',
        description: 'Choose between ffmpeg, libav or neither')
+option('mpg123', type: 'boolean', value: true,
+       description: 'Whether MPG123 support is enabled')
