--- a/meson_options.txt
+++ b/meson_options.txt
@@ -20,6 +20,8 @@ option('adplug', type: 'boolean', value: true,
        description: 'Whether AdPlug support is enabled')
 option('flac', type: 'boolean', value: true,
        description: 'Whether FLAC support is enabled')
+option('vorbis', type: 'boolean', value: true,
+       description: 'Whether Ogg Vorbis support is enabled')
 
 
 # output plugins
