--- a/src/meson.build
+++ b/src/meson.build
@@ -104,6 +104,11 @@ if get_option('vorbis')
   subdir('vorbis')
 endif
 
+if get_option('faad')
+  subdir('aac')
+endif
+
+
 # config.h stuff
 configure_file(input: 'config.h.meson',
   output: 'config.h',
